welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not enough arguments for method col: (h: Int)Unit.
Unspecified value parameter h.
  var T = col()
             ^