welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var l = getMondeLargeur()
  var h = getMondeHauteur()
  var T = col()
  for (j <- 1 to l-1) {
    recule(h-1)
    gauche()
    avance()
    droite()
    recop(h,j,l,T)
  }
}

def recop(h:Int,j:Int,l:Int,T:Array[Color]) {
  for (k <- 1 to l) {
    setCouleurBrosse(T(Math.abs(k-j)))
    baisseBrosse()
    leveBrosse()
    avance()
  }
}

def col(h:Int) {
  var h = getMondeHauteur()
  var T=new Array[Color](h)
  for (i <- 1 to h) {
    T(i-1) = getCouleurSol()
    avance()
  }
}
